src/objects/DateLoadTest__c.object
<CustomObject>
    <fields>
        <fullName>Base__c</fullName>
        <label>Base</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExID__c</fullName>
        <externalId>true</externalId>
        <label>ExID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>DateTime</type>
    </fields>
    <label>Date Load Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExID__c</columns>
        <columns>Base__c</columns>
        <columns>Method__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Data Load Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Load Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>